
1.0.4 (2009.09.21)
*****

FIX   If a popup is opened, its window handle is now being set as the foreground.
      This fixes an issue with certain controls being disabled on popups.
      (thanks Andrew Smith for pointing me in the right direction!).
FIX   Changed dispatcher access in order to work in WinForms scenarios, too.
FIX   Corrected typo in WindowMessageSink.BalloonToolTipChanged event. Used internally
      (although event is public), so users should be fine.
      

----------------------------------------------------------------------------

1.0.3 (2009.07.02)
*****
FIX   Commands did not work with RoutedCommands which require an explicit target
      (thanks Rodolfo Grave).
ADD   Added command target properties for both left and double click commands.
      Allows to explicitly define another control as the target of a routed
      command.


----------------------------------------------------------------------------

1.0.2 (2009.05.18)
*****
FIX   Late-bound DataContext did not coerce properly with ContextMenu, thus
      assigning it the TaskbarIcon rather than the TaskbarIcon's DataContext.
      Thanks Nic Pillinger for discovering the issue.
      

----------------------------------------------------------------------------

1.0.1 (2009.05.15)
*****
CHG   DataContext is also assigned to ContextMenu (thanks Nic Pilllinger),
      and properly coerced for ToolTips and Popups. Also checks whether
      target item has a binding on the DataContext
      (does not just override if DataContext is null).
CHG   Popup creation no longer calls Popup.CreateRootPopup which tries to
      bind to dependency properties that do not exist, thus causing debug
      warnings (thanks to Loic Berthollet).
CHG   The LeftClickCommand now executes with a delay in order to make sure
      it's not a double-click.
FIX   Removed debug output in WindowMessageSink.


----------------------------------------------------------------------------

1.0.0
*****